--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.1.1",
     "core-js": "^3.8.3",
+    "latlon_to_xy": "^1.0.3",
+    "ol": "^6.8.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -36,7 +39,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": [
     "> 1%",
